--- a/React/package.json
+++ b/React/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "font-awesome": "^4.7.0",
+    "netlify": "^13.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "styled-components": "^6.1.13",
